assets/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flask
  name: flask
  namespace: flask-todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - image: quay.io/mregan/flask-todo
        name: flask
        ports:
        - containerPort: 8080
