assets/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: flask-todo
  name: flask-todo
  namespace: flask-todo
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: flask-todo
  sessionAffinity: None
  type: ClusterIP
