assets/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: flask-todo
spec:
  host: flask-todo-openshift-flask-todo.apps.geo.rhtps.net
  port:
    targetPort: 8080
  to:
    kind: Service
    name: flask-todo
    weight: 100
status:
  ingress: []
